syntax = "proto3";

package tieba;

option java_package = "com.huanchengfly.tieba.post.api.models.protos";

message AlaStageDislikeInfo {
  string dislike_reason = 1;
  uint32 dislike_id = 2;
}
